try to fix pb with dropdown menu when collapsed can't scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,8 +148,7 @@ p {
     height: 90vh;
     max-height: 90vh;
     overflow-x: hidden;
-    overflow-y: scroll;
-
+    overflow-y: visible;
 }
 
 /*.nav, .navbar-nav, .navbar-right {
@@ -229,4 +228,5 @@ input{
 
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
   max-height: none;
+  overflow-y: visible;
 }
